...
};

export type AppTabParamList = {
  Accueil: undefined;
  Timeline: undefined;
  Rappels: undefined;
  Foyer: undefined;
  Paramètres: undefined;
};

export type FoyerStackParamList = {
  FoyerHome: undefined;
  Litières: undefined;
  Gamelles: undefined;
  Alimentation: undefined;
};

const HomeStack = createStackNavigator<HomeStackParamList>();
const FoyerStack = createStackNavigator<FoyerStackParamList>();
const Tab = createBottomTabNavigator<AppTabParamList>();
...
